[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.32.5",
    "seleniumbase>=4.45.10",
    "supabase>=2.28.3",
]
